# dwallet-network

./: Cargo.toml  party_2  party_2_test  pnpm-lock.yaml
crates/class-groups-constants/: Cargo.toml
crates/class-groups-constants/src/: lib.rs  main.rs
crates/dwallet-mpc/: Cargo.toml
crates/dwallet-mpc-centralized-party/: Cargo.toml
crates/dwallet-mpc-centralized-party/src/: lib.rs  main.rs
crates/dwallet-mpc/src/: lib.rs  main.rs
crates/pera-bridge/src/: abi.rs  eth_client.rs  events.rs  pera_client.rs
crates/pera-bridge/src/client/: bridge_client.rs
crates/pera-bridge/src/server/: mod.rs
crates/pera-config/: Cargo.toml
crates/pera-config/src/: lib.rs  node.rs
crates/pera-core/: Cargo.toml
crates/pera-core/src/: authority.rs  consensus_handler.rs  main.rs
crates/pera-core/src/dwallet_mpc/: bytes_party.rs  dkg.rs  mpc_events.rs  mpc_instance.rs  mpc_manager.rs  presign.rs  sign.rs
crates/pera-core/src/signature_mpc/: mpc_manager.rs
crates/pera-framework/: published_api.txt
crates/pera-framework-snapshot/: manifest.json
crates/pera-framework/docs/pera-system/: dwallet_2pc_mpc_ecdsa_k1.md  voting_power.md
crates/pera-framework/packages_compiled/: pera-system
crates/pera-node/src/: lib.rs
crates/pera-protocol-config/src/: lib.rs
crates/pera-swarm-config/: Cargo.toml
crates/pera-swarm-config/src/: genesis_config.rs  main.rs  network_config_builder.rs  node_config_builder.rs
crates/pera-types/src/: committee.rs  messages_dwallet_mpc.rs
crates/pera-types/src/pera_system_state/: pera_system_state_inner_v1.rs
crates/signature-mpc/src/twopc_mpc_protocols/: mod.rs
crates/sui-core/src/: authority.rs
crates/sui-framework-snapshot/: manifest.json
crates/sui-types/: Cargo.toml
crates/sui-types/src/: messages_signature_mpc.rs
docs/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-alpha-testnet-md-1eb.json  site-docs-community-md-5ef.json  site-docs-core-concepts-composable-modular-networks-md-0cb.json  site-docs-core-concepts-cryptography-2-pc-mpc-md-385.json  site-docs-core-concepts-cryptography-mpc-md-9d5.json  site-docs-core-concepts-dwallets-md-d0f.json  site-docs-core-concepts-multi-chain-vs-cross-chain-md-764.json  site-docs-core-concepts-noncollusive-and-decentralized-md-09f.json  site-docs-core-concepts-state-proofs-md-4d9.json  site-docs-developers-guide-getting-started-connect-mdx-ce2.json  site-docs-developers-guide-getting-started-dwallet-network-environment-mdx-1ea.json  site-docs-developers-guide-getting-started-encryption-key-md-5f0.json  site-docs-developers-guide-getting-started-examples-bitcoin-multisig-solidity-md-2da.json  site-docs-developers-guide-getting-started-examples-bitcoin-multisig-sui-move-md-0a4.json  site-docs-developers-guide-getting-started-examples-broadcast-bitcoin-tx-md-934.json  site-docs-developers-guide-getting-started-examples-broadcast-ether-tx-md-3bc.json  site-docs-developers-guide-getting-started-examples-multi-chain-atomic-swap-md-672.json  site-docs-developers-guide-getting-started-examples-multi-chain-lending-md-5ee.json  site-docs-developers-guide-getting-started-future-transaction-md-9e0.json  site-docs-developers-guide-getting-started-get-address-md-fe3.json  site-docs-developers-guide-getting-started-get-tokens-mdx-93b.json  site-docs-developers-guide-getting-started-install-dwallet-mdx-40a.json  site-docs-developers-guide-getting-started-local-network-mdx-65a.json  site-docs-developers-guide-getting-started-user-share-encryption-md-31d.json  site-docs-developers-guide-getting-started-your-first-dwallet-md-dcf.json  site-docs-developers-guide-lightclients-ether-lightclient-md-1c0.json  site-docs-developers-guide-lightclients-sui-lightclient-md-534.json  site-docs-operators-guide-md-59c.json  site-docs-overview-md-1db.json  version-current-metadata-prop-751.json
docs/.docusaurus/docusaurus-plugin-debug/default/: docusaurus-debug-all-content-673.json
docs/docs/developers-guide/getting-started/examples/: broadcast-ether-tx.md
pera-execution/latest/pera-adapter/src/: execution_engine.rs
sdk/dwallet-mpc-wasm/src/: lib.rs
sdk/signature-mpc-wasm/: Cargo.toml  package.json  tsconfig.esm.json
sdk/signature-mpc-wasm/src/: lib.rs  main.rs
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/dwallet-mpc/: mock.ts  sign.ts
sdk/typescript/src/signature-mpc/: dwallet.js  dwallet.js.map  dwallet.ts  dwallet_2pc_mpc_ecdsa_k1_module.js  dwallet_2pc_mpc_ecdsa_k1_module.js.map  encrypt_user_share.ts  index.js  index.js.map  sui_stateproof.js  sui_stateproof.js.map  utils.js  utils.js.map
sdk/typescript/test/e2e/: dwallet-mpc.test.ts  encrypt-user-share.test.ts  first.txt  first_2.txt  signature-mpc.test.ts  signature_mpc_wasm.js  signature_mpc_wasm_bg.wasm
