[package]
name = "class_groups_constants"
edition = "2021"
version.workspace = true

[dependencies]
twopc_mpc.workspace = true
group.workspace = true
serde = "1.0.210"
bcs = "0.1.6"
hex = "0.4.3"
class_groups = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "724558dc09ec1154622c76f7490bad093dcf9ffe", subdir = "class-groups" }
homomorphic_encryption = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "724558dc09ec1154622c76f7490bad093dcf9ffe", subdir = "homomorphic-encryption" }
anyhow = "1.0.90"

[lints]
workspace = true
