[package]
name = "dwallet-mpc"
edition = "2021"
version.workspace = true

[dependencies]
mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "aab80f11094566ac4e043e9f586d323766624306", subdir = "mpc" }
twopc_mpc.workspace = true
commitment = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "aab80f11094566ac4e043e9f586d323766624306", subdir = "commitment" }
class_groups_constants = { path = "../class-groups-constants" }
k256 = { git = 'https://github.com/ycscaly/elliptic-curves.git', branch = "13.3-fixed", features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "ecdsa", "hash2curve", "alloc"], default-features = false }

anyhow.workspace = true
bcs.workspace = true
rand_core = "0.6.4"
hex = "0.4.3"
log = "0.4.22"
sha2 = "0.10.8"
sha3 = "0.10.8"

[lints]
workspace = true
