[package]
name = "dwallet-mpc"
edition = "2021"
version.workspace = true

[dependencies]
mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "7e26ab440d93d30e4ec75aa3b7de67d6c2c72e26", subdir = "mpc" }
twopc_mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "7e26ab440d93d30e4ec75aa3b7de67d6c2c72e26", subdir = "2pc-mpc", features = ["secp256k1", "bulletproofs", "class_groups", "paillier"] }
commitment = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "7e26ab440d93d30e4ec75aa3b7de67d6c2c72e26", subdir = "commitment" }
class_groups_constants = { path = "../class-groups-constants" }

anyhow.workspace = true
bcs.workspace = true
rand_core = "0.6.4"
hex = "0.4.3"
log = "0.4.22"
base64 = "0.22.1"
serde_json = "1.0.128"

[lints]
workspace = true
