[package]
name = "pera-config"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
once_cell.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
prometheus.workspace = true
clap.workspace = true
object_store.workspace = true
reqwest.workspace = true

consensus-config.workspace = true
narwhal-config.workspace = true
pera-keys.workspace = true
pera-protocol-config.workspace = true
pera-types.workspace = true

twopc_mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "bfc9089aee4e93ae727175edbf1a98de626eb752", subdir = "2pc-mpc" }
class_groups.workspace = true
mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "bfc9089aee4e93ae727175edbf1a98de626eb752", subdir = "mpc" }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
pera-types = { workspace = true, features = ["test-utils"] }
