[package]
name = "pera-swarm-config"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true
twopc_mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "aab80f11094566ac4e043e9f586d323766624306", subdir = "2pc-mpc", features = ["secp256k1", "bulletproofs", "paillier", "class_groups", "benchmarking"] }
group = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "aab80f11094566ac4e043e9f586d323766624306", subdir = "group" }
mpc = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "aab80f11094566ac4e043e9f586d323766624306", subdir = "mpc" }
class_groups_constants = { path = "../class-groups-constants" }
class_groups = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "aab80f11094566ac4e043e9f586d323766624306", subdir = "class-groups" }
move-bytecode-utils.workspace = true
narwhal-config.workspace = true
shared-crypto.workspace = true
pera-config.workspace = true
pera-macros.workspace = true
pera-protocol-config.workspace = true
pera-types.workspace = true
pera-genesis-builder.workspace = true

[target.'cfg(msim)'.dependencies]
pera-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

pera-execution.workspace = true
